user registration form validation, availability dates

--- a/public/app/views/index.html
+++ b/public/app/views/index.html
@@ -41,6 +41,7 @@
     <script src="app/controllers/bookingCtrl.js"></script>
     <script src="app/controllers/userCtrl.js"></script>
     <script src="app/controllers/availabilityCtrl.js"></script>
+    <script src="app/showErrors.js"></script>
 
     <!-- services -->
     <script src="app/services/userService.js"></script>
