--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -7,3 +7,12 @@
 	padding: 0px;
 	text-align: center
 }
+
+
+.form-group .help-block {
+  display: none;
+}
+
+.form-group.has-error .help-block {
+  display: block;
+}
