--- a/public/app/views/pages/bookingForm.html
+++ b/public/app/views/pages/bookingForm.html
@@ -1,7 +1,7 @@
 <head >
 <link rel="stylesheet" type="text/css" href="main.css">
 </head>
-<div ng-controller="availabilityMainController as availability" ng-init="availability.getAvailability(availability.dateString)">
+<div ng-controller="availabilityMainController as availability" ng-init="availability.getAvailability(availability.date)">
 <div class="page-header">
 	<h1 ng-if="booking.type == 'create'">Create Booking</h1>
     <h1 ng-if="booking.type == 'edit'">Edit Booking</h1>
@@ -35,7 +35,7 @@
         		<div ng-if="booking.bookingData.people >=1">
                     <div class="form-group">
                         <label for="date">Date</label>
-                        <input type="date" min="{{ booking.date | date: 'yyyy-MM-dd' }}" class="form-control" ng-model="booking.bookingData.date">
+                        <input type="date" min="{{ availability.initDate | date: 'yyyy-MM-dd' }}" max="{{ availability.maxDate | date: 'yyyy-MM-dd' }}" class="form-control" ng-model="booking.bookingData.date" ng-change="availability.getAvailability(booking.bookingData.date)">
                     </div>
                  
 
