--- a/public/app/views/pages/bookingForm.html
+++ b/public/app/views/pages/bookingForm.html
@@ -48,7 +48,7 @@
 
         			<div class="form-group">
         				<label for="start">Start Time</label>
-        				<input type="time" class="form-control" ng-model="booking.bookingData.start">
+        				<input type="time" min="0" step="1800" class="form-control" ng-model="booking.bookingData.start">
         			</div>
 
         			<div class="form-group">
