--- a/public/app/views/pages/bookingForm.html
+++ b/public/app/views/pages/bookingForm.html
@@ -43,25 +43,59 @@
                         </select>
                     </div>
                     
+
         			<div class="form-group">
         				<label for="start">Start Time</label>
         				<input type="time" step="1800" class="form-control" ng-model="booking.bookingData.start">
         			</div>
 					
-					<div ng-if="booking.bookingData.start < '13:30:00' && booking.bookingData.start >= '01:30:00'">
-						<div class="alert alert-danger" role="alert"><p>The start time you have chosen is Invalid!<p> 
-						<p>Please select a time after 2:00 PM and before 1:30 AM</p> </div>
-					</div>
-					
-        			<div class="form-group">
-        				<label for="end">End Time</label>
-        				<input type="time" step="1800" class="form-control" ng-model="booking.bookingData.end">
-        			</div>
-					
-					<div ng-if="booking.bookingData.end > '02:00:00' && booking.bookingData.end < '14:30:00'">
-						<div class="alert alert-danger" role="alert"><p>The end time you have chosen is Invalid!<p> 
-						<p>Please select a time after 2:30 PM and before 2:00 AM</p> </div>
-					</div>
+                    <div ng-if="(   (booking.bookingData.date | date: 'EEE') == 'Mon' || 
+                                    (booking.bookingData.date | date: 'EEE') == 'Tue' ||
+                                    (booking.bookingData.date | date: 'EEE') == 'Wed' ||
+                                    (booking.bookingData.date | date: 'EEE') == 'Thu' ) &&
+                                booking.bookingData.start < '15:30:00' && booking.bookingData.start >= '00:30:00'">
+                        <div class="alert alert-danger" role="alert">
+                            <p>The start time you have chosen is Invalid!<p> 
+                            <p>Please select a start time starting 4:00 PM until 1:00 AM Monday to Thursday</p>
+                        </div>
+                    </div>
+
+                    <div ng-if="(   (booking.bookingData.date | date: 'EEE') == 'Sun' || 
+                                    (booking.bookingData.date | date: 'EEE') == 'Fri' ||
+                                    (booking.bookingData.date | date: 'EEE') == 'Sat' ) &&
+                                booking.bookingData.start < '13:30:00' && booking.bookingData.start >= '01:30:00'">
+						<div class="alert alert-danger" role="alert">
+                            <p>The start time you have chosen is Invalid!<p>
+                            <p>Please select a start time starting 2:00 PM until 2:00 AM Friday to Sunday</p>
+                        </div>
+                    </div>
+
+
+                    <div class="form-group">
+                        <label for="end">End Time</label>
+                        <input type="time" step="1800" class="form-control" ng-model="booking.bookingData.end">
+                    </div>
+
+                    <div ng-if="(   (booking.bookingData.date | date: 'EEE') == 'Mon' || 
+                                    (booking.bookingData.date | date: 'EEE') == 'Tue' ||
+                                    (booking.bookingData.date | date: 'EEE') == 'Wed' ||
+                                    (booking.bookingData.date | date: 'EEE') == 'Thu' ) &&
+                                booking.bookingData.end > '01:00:00' && booking.bookingData.end < '16:00:00'">
+                        <div class="alert alert-danger" role="alert">
+                            <p>The start time you have chosen is Invalid!<p> 
+                            <p>Please select an end time after 4:00 PM until 1:00 AM Monday to Thursday</p>
+                        </div>
+                    </div>
+
+                    <div ng-if="(   (booking.bookingData.date | date: 'EEE') == 'Sun' || 
+                                    (booking.bookingData.date | date: 'EEE') == 'Fri' ||
+                                    (booking.bookingData.date | date: 'EEE') == 'Sat' ) &&
+                                booking.bookingData.end > '02:00:00' && booking.bookingData.end < '14:00:00'">
+                        <div class="alert alert-danger" role="alert">
+                            <p>The start time you have chosen is Invalid!<p>
+                            <p>Please select an end time after 2:00 PM until 2:00 AM Friday to Sunday</p>
+                        </div>
+                    </div>
 
         			<div class="form-group">
         				<label for="equip">iPads</label>
@@ -74,13 +108,20 @@
 
                     <div class="form-group">
                         <label for="equip">Mics</label>
-                        <select name="mic" class="form-control" ng-model="booking.bookingData.mic" >
+                        <select name="mic" class="form-control" ng-model="booking.bookingData.mic">
                             <option value="0">0</option>
                             <option value="1">1</option>
                             <option value="2">2</option>
                         </select>
                     </div>
 
+<!-- I have no idea what I'm doing lol
+                    <div class="form-group">
+                        <label for="equip">Mics</label>                        
+                        <select name="mic" class="form-control" ng-model="booking.bookingData.mic" ng-options="mic for mic in mics" ng-change="availability.getAvailability(booking.bookingData)">
+                        </select>
+                    </div>
+ -->
 
                     <div class="container">
                         <button type="submit" class="btn btn-default">Times don't work?</button>
@@ -107,8 +148,10 @@
                     </tr>
                   </tbody>
                 </table>
+                <p style="text-align: right"> Date: {{ booking.bookingData.date }} </p>
+                <p style="text-align: right"> Day of the week: {{ booking.bookingData.date | date: 'EEEE' }} </p>
             </div>
-        </div>
+        </div> 
 
         <div class="row">
             <div class="container" style="padding-top:15px">
