--- a/public/app/views/pages/deleteUser.html
+++ b/public/app/views/pages/deleteUser.html
@@ -1,7 +1,7 @@
 <div align="center">
 
 	<div class="container" ng-if="!user.deleted">
-		<h3>Are you sure you would like to delete your account?</h3>
+		<h3>Are you sure you would like to delete {{ user.username }}?</h3>
 		<form ng-submit="user.deleteUser()">
 			<br/>
 			<button type="submit" class="btn btn-danger">Delete</button>
